Improve how to handle DICOM special modality